--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-redux": "^9.0.2",
+    "redux": "^5.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
